--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,7 @@
 {
   "name": "@sigmasd/crash-report",
   "version": "0.1.0",
-  "exports": "./src/reporter.ts"
+  "exports": "./src/reporter.ts",
+  "license": "MIT",
+  "lock": false
 }
